Derive the nine typed slots the inventory filters on
The normalization pipeline, ported against the reference kernel rather than written from
its prose. Each slot has its own step and the order is load-bearing: the family decides
whether a name may contribute a curve, the parameter set decides which digit runs the
variant may keep, and the mode decides which token the variant must not repeat. A digit
run consumed by one slot must never be consumed again by another -- without that,
ECDSA-P-256 reads size 256 out of its own curve name and collides with ECDSA-SHA256.

The principle underneath a dozen of these rules: every producer-supplied "authoritative"
identifier in a CBOM has been observed fabricated in real data. OIDs carry an id-sha3-384
arc on an asset named SHA-384; algorithmFamily carries values outside the registry on 11
corpus assets, splitting 9 same-name groups when it was taken verbatim. So each is
corroborated rather than trusted, and loses when it contradicts something better
supported. Family derivation has three outcomes rather than two: agreement corroborates,
subsumption lets a concrete token win WITHOUT refuting the arc -- which matters because
1.2.840.10045.3.1.7 yields family EC plus a curve, and treating EC against ECDSA as a
contradiction would discard the curve and break 1.6/1.7 parity -- and only a genuine
cross-group contradiction refutes, where the name wins and the arc forfeits every further
contribution.

primitive is derived, stored and filterable, and deliberately NOT keyed. Three producers
describing one RSA-2048 emit signature, pke and kem: it is an opinion about an asset
rather than a property of it, and keying it produced 434 keys where 399 are correct with
426 assets in groups that disagreed with themselves.

Two rules exist to prevent weak-crypto erasure, which is the one outcome an inventory
must never produce. Secondary tokens keep the digest in composite constructions, so
MD5withRSA no longer merges with SHA256withRSA; and the 